# Basic

./: CMakeLists.txt
scripts/: train_cnn.py  train_dnn.py  train_lstm.py
src/: cnn_model.cpp  cnn_model.h  debater.cpp  debater.h  dnn_model.cpp  dnn_model.h  lstm_model.cpp  lstm_model.h  main.cpp  voice.cpp  voice.h
